Subimos o Kafka acessível para o bank-backend

--- a/codeflix/.env
+++ b/codeflix/.env
@@ -4,3 +4,8 @@ dsnTest=":memory:"
 env="dev"
 debug="true"
 AutoMigrateDb="true"
+
+kafkaBootstrapServers="host.docker.internal:9094"
+kafkaConsumerGroupId="codeflix"
+kafkaTransactionTopic="transactions"
+kafkaTransactionConfirmationTopic="transaction-confirmation"
