--- a/codeflix/docker-compose.yaml
+++ b/codeflix/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
       # TODO volume mapeando a instalação de pacotes para o lado de fora, 
       # pois está reinstalando tudo a cada build.
       # (esse não é só um lembrete de consulta posterior, é para fazer MESMO)
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   db:
     image: postgres:9.4
@@ -42,7 +44,7 @@ services:
       KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9092,OUTSIDE://host.docker.internal:9094
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
     extra_hosts:
-      - "host.docker.internal:172.17.0.1"
+      - "host.docker.internal:host-gateway"
 
   kafka-topics-generator:
     image: confluentinc/cp-kafka:latest
