--- a/bank-backend/docker-compose.yml
+++ b/bank-backend/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - 3000:3000
     volumes:
       - .:/home/node/app
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
   
   db:
     image: postgres:9.4
