--- a/codeflix/docker-compose.yaml
+++ b/codeflix/docker-compose.yaml
@@ -3,6 +3,8 @@ version: "3"
 services:
   app:
     build: .
+    ports:
+      - "50051:50051"
     volumes:
       - .:/go/src/
       # TODO volume mapeando a instalação de pacotes para o lado de fora, 
